<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory android:title="@string/prefrences_title_group_general">

        <Preference
            android:key="@string/preferences_key_permission"
            android:selectable="true"
            android:summary="@string/preferences_summary_permission"
            android:title="Permission"
            app:singleLineTitle="true" />

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/preferences_title_group_about">

        <Preference
            android:key="@string/preference_key_about"
            android:title="About us"
            app:singleLineTitle="true" />

        <Preference
            android:key="@string/preferences_key_privacy"
            android:title="Privacy Policy"
            app:singleLineTitle="true" />

    </PreferenceCategory>

</PreferenceScreen>